force-app/main/default/objects/Supplier_Change_Request__c/Supplier_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Supplier Change Request</label>
    <nameField>
        <label>Change Control Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>