force-app/main/default/objects/Supplier_Change_Request__c/fields/Change_Control_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Request__c</fullName>
    <label>Change Control Request</label>
    <referenceTo>FundingAwardAmendment</referenceTo>
    <relationshipLabel>Supplier Change Requests</relationshipLabel>
    <relationshipName>Supplier_Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>