force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Companies_House_Registered_No__c.field-meta.xml
<CustomField>
    <fullName>From_Companies_House_Registered_No__c</fullName>
    <label>Companies House Registered No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>