force-app/main/default/objects/Supplier_Change_Request__c/fields/From_MCS_No__c.field-meta.xml
<CustomField>
    <fullName>From_MCS_No__c</fullName>
    <label>MCS No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>