force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Mobilisation_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Mobilisation_Date__c</fullName>
    <label>Mobilisation Date</label>
    <type>Date</type>
</CustomField>