force-app/main/default/objects/Supplier_Change_Request__c/fields/From_PAS_2035_Certified__c.field-meta.xml
<CustomField>
    <fullName>From_PAS_2035_Certified__c</fullName>
    <label>PAS 2035 Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>