force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Procurement_Methodology_and_Regulat__c.field-meta.xml
<CustomField>
    <fullName>From_Procurement_Methodology_and_Regulat__c</fullName>
    <label>Procurement Methodology and Regulat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>