force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Role_in_Project__c.field-meta.xml
<CustomField>
    <fullName>From_Role_in_Project__c</fullName>
    <label>Role in Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>