force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Supplier_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>From_Supplier_Contract_Type__c</fullName>
    <label>Supplier Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Vendor Contract</fullName>
            </value>
            <value>
                <fullName>Managing Agent</fullName>
            </value>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Turnkey Provider</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>A&amp;A Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>