force-app/main/default/objects/Supplier_Change_Request__c/fields/From_Supplier_Name_Companies_House_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Supplier_Name_Companies_House_Name__c</fullName>
    <label>Supplier Name (Companies House Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>