force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>