force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>