force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>To_Contract_Value__c</fullName>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>