force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Estimated_average_installs_month__c.field-meta.xml
<CustomField>
    <fullName>To_Estimated_average_installs_month__c</fullName>
    <label>Estimated average installs/month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>