force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Procurement_Methodology_and_Regulatio__c.field-meta.xml
<CustomField>
    <fullName>To_Procurement_Methodology_and_Regulatio__c</fullName>
    <label>Procurement Methodology and Regulatio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>