force-app/main/default/objects/Supplier_Change_Request__c/fields/To_SME__c.field-meta.xml
<CustomField>
    <fullName>To_SME__c</fullName>
    <label>SME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>