force-app/main/default/objects/Supplier_Change_Request__c/fields/To_Transferred_from_HUG_2__c.field-meta.xml
<CustomField>
    <fullName>To_Transferred_from_HUG_2__c</fullName>
    <label>Transferred from HUG 2?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>